# toolware

./: mkdocs.yml  pyproject.toml  reference.bib
.github/workflows/: ci.yml
1.0/: 404.html  index.html
1.0/search/: search_index.json
1.0/src/: index.html
1.0/version_control/: index.html
1.0/version_control/git/: index.html
docs/: index.md
docs/src/: README.md
docs/version_control/: README.md  git.md
latest/src/: index.html
latest/version_control/: index.html
latest/version_control/git/: index.html
overrides/: main.html
src/: README.md
