[tool.poetry]
name = "toolware"
version = "0.1.0"
description = "学术工具仓库文档"
authors = ["kyrie1218 <kyrie1218@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.0.11"
mike = "^1.1.2"
mkdocs-macros-plugin = "^0.7.0"
pypandoc-binary = "^1.10"
mkdocs-bibtex = "^2.8.12"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
